<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Registration">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"
            />

        <EditText
            android:id="@+id/et_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/editshape"
            android:hint="@string/first_name"
            android:padding="10dp"
            android:textColor="@color/text"
            android:textColorHint="#AE000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/et_phone"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <EditText
            android:id="@+id/et_lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/editshape"
            android:hint="@string/last_name"
            android:paddingTop="10dp"
            android:textColor="@color/text"
            android:textColorHint="#AE000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/et_phone"
            app:layout_constraintStart_toEndOf="@id/et_fname"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/editshape"
            android:hint="@string/email"
            android:padding="10dp"
            android:textColor="@color/text"
            android:textColorHint="#AE000000"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/et_fname" />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/editshape"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/text"
            android:textColorHint="#AE000000"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/et_email" />



        <EditText

            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/editshape"
            android:hint="@string/phone_number"
            android:padding="10dp"
            android:inputType="number"
            android:textColor="@color/text"
            android:textColorHint="#AE000000"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/et_pass" />

        <EditText
            android:id="@+id/et_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/editshape"
            android:hint="@string/country"
            android:padding="25dp"
            android:textColor="@color/text"
            android:textColorHint="#AE000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/et_phone"
            app:layout_constraintTop_toBottomOf="@id/et_phone"
            />

        <EditText
            android:id="@+id/et_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/editshape"
            android:hint="@string/city"
            android:paddingTop="10dp"
            android:textColor="@color/text"
            android:textColorHint="#AE000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/et_phone"
            app:layout_constraintStart_toEndOf="@id/et_country"
app:layout_constraintTop_toBottomOf="@id/et_phone"
            />
        <EditText
            android:id="@+id/et_nationalID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/editshape"
            android:hint="@string/national_id"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/text"
            android:textColorHint="#AE000000"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/et_city" />

        <EditText
            android:id="@+id/et_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/editshape"
            android:hint="@string/gender"
            android:padding="10dp"
            android:textColor="@color/text"
            android:textColorHint="#AE000000"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/et_nationalID"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/et_birthdate"
            android:layout_width="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/editshape"
            style="@style/EditText"
            android:autofillHints="Date"
            android:hint="@string/Date"
            android:inputType="date"
            android:padding="10dp"
            android:textColor="@color/text"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/et_gender"
            />
        <ProgressBar
            android:id="@+id/progressBarRegister"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_registration" />

        <Button
            android:id="@+id/btn_registration"
            android:layout_width="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/et_birthdate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/registration"
            android:textSize="20sp"
            android:background="@drawable/btnshape"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tv_haveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_registration"
            app:layout_constraintStart_toStartOf="@id/btn_registration"
            app:layout_constraintEnd_toEndOf="@id/btn_registration"
            android:layout_marginTop="10dp"
            android:text="@string/have_account"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
