<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:text="Symptoms of signals"
            android:textSize="30sp" />

        <TextView
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temporary" />
        <EditText
            android:id="@+id/et_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/editshape"
            android:hint="@string/enter_yes_or_no"
            android:padding="10dp"
            android:textColor="@color/text"
            android:textColorHint="#AE000000"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/et_fname" />
        <TextView
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staring"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/et_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/editshape"
            android:hint="@string/enter_yes_or_no"
            android:padding="10dp"
            android:textColor="@color/text"
            android:textColorHint="#AE000000"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/et_fname" />
        <TextView
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stiff"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/et_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/editshape"
            android:hint="@string/enter_yes_or_no"
            android:padding="10dp"
            android:textColor="@color/text"
            android:textColorHint="#AE000000"
            android:textSize="18sp"
/>
        <TextView
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
            android:text="@string/uncontrollable" />
        <EditText
            android:id="@+id/et_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/editshape"
            android:hint="@string/enter_yes_or_no"
            android:padding="10dp"
            android:textColor="@color/text"
            android:textColorHint="#AE000000"
            android:textSize="18sp"
/>
        <TextView
            style="@style/TextView"
            android:layout_width="wrap_content"
           android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/unconsciousness" />
        <EditText
            android:id="@+id/et_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/editshape"
            android:hint="@string/enter_yes_or_no"
            android:padding="10dp"
            android:textColor="@color/text"
            android:textColorHint="#AE000000"
            android:textSize="18sp"
/>
        <TextView
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/psychological" />
        <EditText
            android:id="@+id/et_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/editshape"
            android:hint="@string/enter_yes_or_no"
            android:padding="10dp"
            android:textColor="@color/text"
            android:textColorHint="#AE000000"
            android:textSize="18sp"
/>

    </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/btnshape"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/btnshape"
                    android:text="@string/Back"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

</ScrollView>