<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ForgetPassword"
    android:background="@color/white">

    <TextView
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/reset_your_password"
        android:textColor="@color/text"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reset"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="80dp"
        android:hint="@string/enter_your_email"
        android:textColorHint="#BA000000"
        android:textSize="18sp"
        android:background="@drawable/editshape"
        android:textColor="@color/text"
        android:paddingStart="20dp"
        />

    <EditText
        android:id="@+id/et_resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_email1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="80dp"
        android:hint="@string/enter_your_password"
        android:textSize="18sp"
        android:background="@drawable/editshape"
        android:textColor="@color/text"
        android:paddingStart="20dp"
        android:textColorHint="#BA000000"
        />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email1"
        />

    <LinearLayout
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/et_resetPassword"
        app:layout_constraintTop_toBottomOf="@id/et_resetPassword"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@id/submit"
        android:layout_marginStart="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingEnd="20dp"
            android:text="@string/notes"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#9F000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:paddingBottom="20dp"
            android:textColor="#9F000000"
            android:text="@string/your_password_must_start_with_capital_character_upper_and_lower_latters_must_contain_numbers_and_special_character"
            android:textSize="15sp"
            />
    </LinearLayout>

<Button
    android:id="@+id/submit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/note"
    android:layout_marginTop="30dp"
    android:layout_marginStart="50dp"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginEnd="50dp"
    android:background="@drawable/btnshape"
    android:text="@string/submit"
    android:textColor="@color/white"
    android:textSize="20sp"
    android:textStyle="bold"
    />

</androidx.constraintlayout.widget.ConstraintLayout>