<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".UI.EEGResult">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/eeg_classification"
        android:textColor="@color/text"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/classification"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/classificationEEG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:enabled="false"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/probability_of_seizure"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/probabilitySeizureEEG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:enabled="false"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/probability_of_non_seizure"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/probabilityNonEEG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:enabled="false"
            android:textSize="18sp" />

    </LinearLayout>


        <Button
            android:id="@+id/saveEEG"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/save_eeg1"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@drawable/btnshape"/>



</LinearLayout>