<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical"

    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/logo"
        />
    <Button
        android:id="@+id/recordEmg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/btn_background"
        android:text="@string/record_emg"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/uploadMri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/btn_background"
        android:text="@string/upload_mri"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/uploadEeg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/btn_background"
        android:text="@string/upload_eeg"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        />


</LinearLayout>